--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -7,147 +7,110 @@
     android:background="#FFFFFF"
     tools:context=".MainActivity">
 
-    <include
-        android:id="@+id/include"
-        layout="@layout/toolbar"
-        android:layout_width="match_parent"
-        android:layout_height="55dp" />
+    <LinearLayout
 
-    <androidx.constraintlayout.widget.ConstraintLayout
-        android:id="@+id/constraintLayout"
-        android:layout_width="match_parent"
-        android:layout_height="346dp"
-        android:layout_marginTop="55dp"
-        android:background="@color/main_color"
+        android:id="@+id/linearLayout"
+        android:layout_width="383dp"
+        android:layout_height="240dp"
+        android:layout_marginStart="14dp"
+        android:layout_marginTop="15dp"
+        android:layout_marginEnd="14dp"
+        android:background="@drawable/roundedge"
+        android:orientation="vertical"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="1.0"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent">
-
-        <TextView
-            android:id="@+id/textView2"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginStart="24dp"
-            android:layout_marginTop="32dp"
-            android:text="김슈니"
-            android:textColor="@color/white"
-            android:textSize="30sp"
-            android:textStyle="bold"
-            app:layout_constraintEnd_toStartOf="@+id/textView3"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent" />
-
-        <TextView
-            android:id="@+id/textView3"
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:layout_marginStart="8dp"
-            android:layout_marginTop="32dp"
-            android:layout_marginEnd="70dp"
-            android:layout_marginBottom="14dp"
-            android:text="회원님"
-            android:textColor="@color/white"
-            android:textSize="20sp"
-            app:layout_constraintBottom_toTopOf="@+id/linearLayout"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toEndOf="@+id/textView2"
-            app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toBottomOf="@+id/btn_refresh">
 
         <LinearLayout
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="20dp"
+            android:background="@drawable/edge1"
+            android:orientation="horizontal">
 
-            android:id="@+id/linearLayout"
-            android:layout_width="383dp"
-            android:layout_height="240dp"
-            android:layout_marginStart="24dp"
-            android:layout_marginTop="24dp"
-            android:layout_marginEnd="24dp"
-            android:layout_marginBottom="24dp"
-            android:background="@drawable/roundedge"
-            android:orientation="vertical"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/textView2">
-
-            <LinearLayout
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:background="@drawable/edge1"
-                android:layout_marginStart="20dp"
-                android:orientation="horizontal">
-
-                <ImageButton
-                    android:layout_width="50dp"
-                    android:layout_height="50dp"
-                    android:layout_marginTop="20dp"
-                    android:backgroundTint="@color/white"
-                    android:tint="@color/icon_launcher_background"
-                    app:srcCompat="@drawable/ic_baseline_check_24" />
-
-                <TextView
-                    android:id="@+id/todoTitleTextView"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:layout_marginTop="30dp"
-                    android:layout_marginEnd="10dp"
-                    android:gravity="center"
-                    android:text="정보처리기사 자격증 취득"
-                    android:textAppearance="@style/TextAppearance.AppCompat.Body2"
-                    android:textSize="24sp"
-                    android:textStyle="bold" />
-            </LinearLayout>
-            <TextView
-                android:id="@+id/todoDateTextView"
-                android:layout_width="match_parent"
-                android:layout_height="30dp"
+            <ImageButton
+                android:layout_width="50dp"
+                android:layout_height="50dp"
                 android:layout_marginTop="20dp"
-                android:background="#E4F1FF"
-                android:gravity="center_vertical"
-                android:padding="3dp"
-                android:paddingStart="30dp"
-                android:text="2021/02/11"
-                android:textColor="@color/text_gray_dark"
-                android:textSize="18sp"
-                android:textStyle="bold" />
+                android:backgroundTint="@color/white"
+                android:tint="@color/icon_launcher_background"
+                app:srcCompat="@drawable/ic_baseline_check_24" />
 
             <TextView
-                android:id="@+id/todoSubtitleTextView"
+                android:id="@+id/todoTitleTextView"
                 android:layout_width="match_parent"
-                android:layout_height="132dp"
-                android:layout_marginTop="10dp"
-                android:padding="3dp"
-                android:paddingStart="30dp"
-                android:text="정보처리기사 자격증 취득"
-                android:lineSpacingExtra="3dp"
-                android:textAppearance="@style/TextAppearance.AppCompat.Body1"
-                android:textSize="18sp" />
-
+                android:layout_height="wrap_content"
+                android:layout_marginTop="30dp"
+                android:layout_marginEnd="10dp"
+                android:gravity="center"
+                android:text="todoTitleTextView"
+                android:textAppearance="@style/TextAppearance.AppCompat.Body2"
+                android:textSize="24sp"
+                android:textStyle="bold" />
         </LinearLayout>
 
-        <ImageButton
-            android:id="@+id/btn_refresh"
-            android:layout_width="42dp"
-            android:layout_height="39dp"
-            android:layout_marginTop="32dp"
-            android:layout_marginEnd="24dp"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintTop_toTopOf="parent"
-            app:srcCompat="@drawable/refresh2" />
+        <TextView
+            android:id="@+id/todoDateTextView"
+            android:layout_width="match_parent"
+            android:layout_height="30dp"
+            android:layout_marginTop="20dp"
+            android:background="#E4F1FF"
+            android:gravity="center_vertical"
+            android:padding="3dp"
+            android:paddingStart="30dp"
+            android:text="2021/02/11"
+            android:textColor="@color/text_gray_dark"
+            android:textSize="18sp"
+            android:textStyle="bold" />
 
-    </androidx.constraintlayout.widget.ConstraintLayout>
+        <TextView
+            android:id="@+id/todoSubtitleTextView"
+            android:layout_width="match_parent"
+            android:layout_height="132dp"
+            android:layout_marginTop="10dp"
+            android:lineSpacingExtra="3dp"
+            android:padding="3dp"
+            android:paddingStart="30dp"
+            android:text="todoSubTitle"
+            android:textAppearance="@style/TextAppearance.AppCompat.Body1"
+            android:textSize="18sp" />
+
+    </LinearLayout>
+
+    <ImageButton
+        android:id="@+id/btn_refresh"
+        android:layout_width="42dp"
+        android:layout_height="39dp"
+        android:layout_marginTop="32dp"
+        android:layout_marginEnd="23dp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:srcCompat="@drawable/refresh2" />
+
+    <TextView
+        android:id="@+id/textView2"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="24dp"
+        android:layout_marginTop="32dp"
+        android:text="김슈니"
+        android:textColor="@color/black"
+        android:textSize="30sp"
+        android:textStyle="bold"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
 
     <ImageButton
         android:id="@+id/btn_port"
         android:layout_width="80dp"
         android:layout_height="80dp"
         android:layout_marginStart="8dp"
-        android:layout_marginTop="20dp"
+        android:layout_marginTop="41dp"
         android:layout_marginEnd="8dp"
         app:layout_constraintEnd_toStartOf="@+id/btn_awards"
         app:layout_constraintHorizontal_bias="0.466"
         app:layout_constraintStart_toEndOf="@+id/todoButton"
-        app:layout_constraintTop_toBottomOf="@+id/constraintLayout"
+        app:layout_constraintTop_toBottomOf="@+id/linearLayout"
         app:srcCompat="@drawable/portfolio" />
 
     <ImageButton
@@ -195,11 +158,11 @@
         android:layout_width="80dp"
         android:layout_height="80dp"
         android:layout_marginStart="78dp"
-        android:layout_marginTop="20dp"
+        android:layout_marginTop="41dp"
         android:layout_marginEnd="16dp"
         app:layout_constraintEnd_toStartOf="@+id/btn_port"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/constraintLayout"
+        app:layout_constraintTop_toBottomOf="@+id/linearLayout"
         app:srcCompat="@drawable/checkbox" />
 
     <ImageButton
@@ -207,11 +170,11 @@
         android:layout_width="80dp"
         android:layout_height="80dp"
         android:layout_marginStart="16dp"
-        android:layout_marginTop="20dp"
+        android:layout_marginTop="41dp"
         android:layout_marginEnd="78dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toEndOf="@+id/btn_port"
-        app:layout_constraintTop_toBottomOf="@+id/constraintLayout"
+        app:layout_constraintTop_toBottomOf="@+id/linearLayout"
         app:srcCompat="@drawable/trophy" />
 
     <TextView
