--- a/app/src/main/res/layout/login_login.xml
+++ b/app/src/main/res/layout/login_login.xml
@@ -3,8 +3,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:background="@color/main_color">
+    android:layout_height="match_parent">
 
     <ImageView
         android:id="@+id/loginIcon"
@@ -52,7 +51,7 @@
     <EditText
         android:id="@+id/pwd"
         android:layout_width="280dp"
-        android:layout_height="45dp"
+        android:layout_height="48dp"
         android:layout_marginStart="24dp"
         android:layout_marginTop="4dp"
         android:layout_marginEnd="24dp"
@@ -69,7 +68,7 @@
     <EditText
         android:id="@+id/id"
         android:layout_width="280dp"
-        android:layout_height="45dp"
+        android:layout_height="48dp"
         android:layout_marginStart="24dp"
         android:layout_marginTop="16dp"
         android:layout_marginEnd="24dp"
