--- a/app/src/main/res/layout/account_activity.xml
+++ b/app/src/main/res/layout/account_activity.xml
@@ -13,15 +13,6 @@
 
     </com.google.android.material.appbar.AppBarLayout>
 
-    <include layout="@layout/todo_content" />
-
-    <com.google.android.material.floatingactionbutton.FloatingActionButton
-        android:id="@+id/fab"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_gravity="bottom|end"
-        android:layout_margin="@dimen/fab_margin"
-        app:backgroundTint="@color/main_color"
-        app:srcCompat="@drawable/ic_baseline_add_24" />
+    <include layout="@layout/account_list_content" />
 
 </androidx.coordinatorlayout.widget.CoordinatorLayout>
