--- a/app/src/main/res/layout/event_content.xml
+++ b/app/src/main/res/layout/event_content.xml
@@ -10,12 +10,6 @@
     android:layout_height="match_parent"
     android:background="#FFFFFF">
 
-    <include
-        android:id="@+id/include"
-        layout="@layout/toolbar"
-        android:layout_width="match_parent"
-        android:layout_height="55dp" />
-
     <TextView
         android:id="@+id/titleSub"
         android:layout_width="372dp"
@@ -64,12 +58,11 @@
         android:layout_width="200dp"
         android:layout_height="233dp"
         android:layout_marginStart="135dp"
-        android:layout_marginTop="16dp"
         android:layout_marginEnd="135dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.508"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/include" />
+        tools:layout_editor_absoluteY="71dp" />
 
     <ImageButton
         android:id="@+id/webBtn"
