--- a/app/src/main/res/layout/mypage_activity_main.xml
+++ b/app/src/main/res/layout/mypage_activity_main.xml
@@ -4,14 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/back_gray"
     tools:context=".mypage.mypageMainActivity">
-
-    <include
-        android:id="@+id/include"
-        layout="@layout/toolbar"
-        android:layout_width="match_parent"
-        android:layout_height="55dp" />
 
     <TextView
         android:id="@+id/textView17"
@@ -20,6 +13,7 @@
         android:layout_marginTop="88dp"
         android:text="마이 페이지"
         android:textAlignment="center"
+        android:textColor="@color/text_gray"
         android:textSize="30sp"
         android:textStyle="bold"
         app:layout_constraintEnd_toEndOf="parent"
@@ -29,19 +23,21 @@
 
     <ImageView
         android:id="@+id/imageView"
-        android:layout_width="159dp"
-        android:layout_height="150dp"
-        android:layout_marginTop="36dp"
+        android:layout_width="189dp"
+        android:layout_height="182dp"
+        android:layout_marginStart="32dp"
+        android:layout_marginTop="16dp"
+        android:layout_marginEnd="32dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/textView17"
-        app:srcCompat="@drawable/people2" />
+        app:srcCompat="@drawable/login_icon" />
 
     <LinearLayout
         android:id="@+id/linearLayout_my"
         android:layout_width="match_parent"
         android:layout_height="50dp"
-        android:layout_marginTop="32dp"
+        android:layout_marginTop="24dp"
         android:background="@drawable/edge2"
         android:orientation="horizontal"
         app:layout_constraintEnd_toEndOf="parent"
@@ -63,7 +59,7 @@
             android:background="@null"
             android:gravity="center_vertical"
             android:padding="10dp"
-            android:text="swu2021"
+            android:text="bob_id"
             android:textSize="20dp" />
     </LinearLayout>
 
@@ -91,51 +87,67 @@
             android:id="@+id/email_my"
             android:layout_width="330dp"
             android:layout_height="50dp"
-            android:textSize="20dp"
-            android:padding="10dp"
             android:background="@null"
             android:gravity="center_vertical"
-            android:text="swu2021@swu.ac.kr" />
+            android:padding="10dp"
+            android:text="bob_email"
+            android:textSize="20dp" />
     </LinearLayout>
 
-    <Button
-        android:id="@+id/my_appout"
-        android:layout_width="0dp"
-        android:layout_height="44dp"
+    <androidx.constraintlayout.widget.ConstraintLayout
+        android:id="@+id/layout_out"
+        android:layout_width="378dp"
+        android:layout_height="45dp"
         android:layout_marginStart="16dp"
-        android:layout_marginTop="36dp"
+        android:layout_marginTop="32dp"
         android:layout_marginEnd="16dp"
-        android:text="회원 탈퇴"
-        android:textColor="@color/white"
-        android:textSize="20dp"
+        android:background="#EEF4FF"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/linearLayout1_my" />
+        app:layout_constraintTop_toBottomOf="@+id/linearLayout1_my">
 
-    <Button
-        android:id="@+id/app_finish"
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
+        <TextView
+            android:id="@+id/textView15"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="32dp"
+            android:layout_marginBottom="32dp"
+            android:text="회원탈퇴하기"
+            android:textAlignment="center"
+            android:textColor="@color/text_gray"
+            android:textSize="16sp"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintTop_toTopOf="parent" />
+
+    </androidx.constraintlayout.widget.ConstraintLayout>
+
+    <androidx.constraintlayout.widget.ConstraintLayout
+        android:id="@+id/layout_quit"
+        android:layout_width="378dp"
+        android:layout_height="45dp"
         android:layout_marginStart="16dp"
-        android:layout_marginTop="4dp"
+        android:layout_marginTop="32dp"
         android:layout_marginEnd="16dp"
-        android:text="종료하기"
-        android:textColor="@color/white"
-        android:textSize="20dp"
+        android:background="#EEF4FF"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintHorizontal_bias="1.0"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/my_appout" />
+        app:layout_constraintTop_toBottomOf="@+id/layout_out">
 
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginBottom="16dp"
-        android:text="Copyright 2021. (Whisper) All pictures cannot be copied without permission"
-        android:textColor="@color/black"
-        android:textSize="11dp"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent" />
+        <TextView
+            android:id="@+id/textView2"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="32dp"
+            android:layout_marginBottom="32dp"
+            android:text="어플 종료"
+            android:textAlignment="center"
+            android:textColor="@color/text_gray"
+            android:textSize="16sp"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            tools:layout_editor_absoluteX="0dp" />
+    </androidx.constraintlayout.widget.ConstraintLayout>
+
 </androidx.constraintlayout.widget.ConstraintLayout>
+
