--- a/app/src/main/res/layout/event_listview.xml
+++ b/app/src/main/res/layout/event_listview.xml
@@ -6,17 +6,12 @@
     android:layout_height="match_parent"
     tools:context=".event.EventListActivity">
 
-    <ImageView
-        android:id="@+id/imageView3"
-        android:layout_width="81dp"
-        android:layout_height="54dp"
-        android:layout_marginStart="8dp"
-        android:layout_marginTop="16dp"
-        android:layout_marginEnd="8dp"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:srcCompat="@drawable/login_icon" />
+    <include
+        android:id="@+id/include"
+        layout="@layout/toolbar"
+        android:layout_width="match_parent"
+        android:layout_height="86dp"
+        tools:layout_editor_absoluteX="-3dp" />
 
     <ListView
         android:id="@+id/listview"
@@ -36,14 +31,14 @@
         android:layout_width="110dp"
         android:layout_height="0dp"
         android:layout_marginStart="16dp"
-        android:layout_marginTop="16dp"
+        android:layout_marginTop="8dp"
         android:text="전체보기"
         android:textColor="@color/black"
         android:textSize="16sp"
         android:textStyle="bold"
         app:backgroundTint="@color/sub_color"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/imageView3" />
+        app:layout_constraintTop_toBottomOf="@+id/include" />
 
     <Button
         android:id="@+id/volunteerBtn"
@@ -79,7 +74,7 @@
         android:id="@+id/eduBtn"
         android:layout_width="wrap_content"
         android:layout_height="50dp"
-        android:layout_marginTop="16dp"
+        android:layout_marginTop="8dp"
         android:layout_marginEnd="16dp"
         android:text="교육"
         android:textColor="@color/black"
@@ -87,7 +82,7 @@
         android:textStyle="bold"
         app:backgroundTint="@color/sub_color"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/imageView3" />
+        app:layout_constraintTop_toBottomOf="@+id/include" />
 
     <Button
         android:id="@+id/otherBtn"
@@ -108,7 +103,7 @@
         android:layout_width="145dp"
         android:layout_height="50dp"
         android:layout_marginStart="16dp"
-        android:layout_marginTop="16dp"
+        android:layout_marginTop="8dp"
         android:layout_marginEnd="16dp"
         android:text="대회·공모전"
         android:textColor="@color/black"
@@ -117,7 +112,7 @@
         app:backgroundTint="@color/sub_color"
         app:layout_constraintEnd_toStartOf="@+id/eduBtn"
         app:layout_constraintStart_toEndOf="@+id/allBtn"
-        app:layout_constraintTop_toBottomOf="@+id/imageView3" />
+        app:layout_constraintTop_toBottomOf="@+id/include" />
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
