--- a/app/src/main/res/layout/port_activity_main.xml
+++ b/app/src/main/res/layout/port_activity_main.xml
@@ -14,18 +14,11 @@
 
     </com.google.android.material.appbar.AppBarLayout>
 
-    <include layout="@layout/port_content_main" />
-
-    <com.google.android.material.floatingactionbutton.FloatingActionButton
-        android:id="@+id/fab_port"
-        android.layout_margin="@dimen/fab_margin"
-        android:layout_marginEnd="16dp"
-        android:layout_marginBottom="16dp"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_gravity="bottom|end"
-        app:backgroundTint="@color/main_color"
-        app:srcCompat="@drawable/ic_baseline_add_24"
-        tools:ignore="VectorDrawableCompat" />
+    <include
+        android:id="@+id/include"
+        layout="@layout/toolbar"
+        android:layout_width="match_parent"
+        android:layout_height="86dp"
+        tools:layout_editor_absoluteX="-3dp" />
 
 </androidx.coordinatorlayout.widget.CoordinatorLayout>
